--- a/Newrich/index.html
+++ b/Newrich/index.html
@@ -488,6 +488,55 @@
         </div>
       </section>
       <!-- End Pricing Section -->
+      <section class="section-08 container">
+        <div
+          class="section-08-content d-flex flex-column-reverse flex-md-row flex-lg-row align-items-center"
+        >
+          <div>
+            <img src="./assets/section-08-img-1440.png" alt="" srcset="" />
+          </div>
+          <div>
+            <a href="" class="whyChoose text-white py-2 px-3 rounded"
+              >Why Choose SaasPlate</a
+            >
+            <h2>Knock Our Support and Get Reply within 15 minutes</h2>
+          </div>
+        </div>
+
+        <a href="" class="getinTouch text-white py-3 px-2 rounded"
+          >Get In Touch Free</a
+        >
+      </section>
+
+      <!-- Subscription Section 09  -->
+
+      <section class="section-09 container">
+        <div class="section-09-bg">
+          <div class="text-white">
+            <h2>Start Your Project With Appie.</h2>
+            <p>We will email you only about this product.</p>
+            <form
+              action=""
+              class="d-flex flex-column flex-md-row flex-lg-row align-items-center gap-4"
+            >
+              <div class="d-flex position-relative">
+                <!-- <img
+                  class="position-absolute"
+                  src="./assets/email-icon.svg.svg"
+                  alt="email icon"
+                  srcset=""
+                /> -->
+                <input
+                  class="form-control"
+                  type="email"
+                  placeholder="Your Email"
+                />
+              </div>
+              <input type="submit" value="Subscribe" />
+            </form>
+          </div>
+        </div>
+      </section>
 
       <!-- ======= Contact Section ======= -->
       <section id="contact" class="contact section-10 py-5">
@@ -695,6 +744,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdnjs.com/libraries/Chart.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
