--- a/Newrich/index.html
+++ b/Newrich/index.html
@@ -42,11 +42,11 @@
     <header>
       <nav>
         <div class="navbar">
-          <div class="logo"><a href="#">Logo</a></div>
+          <div class="logo"><a href="#">Newrich</a></div>
           <i class="bx bx-menu"></i>
           <div class="nav-links">
             <div class="sidebar-logo">
-              <span class="logo-name">Logo</span>
+              <span class="logo-name">Newrich</span>
               <i class="bx bx-x"></i>
             </div>
             <ul class="links">
