--- a/Newrich/index.html
+++ b/Newrich/index.html
@@ -9,6 +9,11 @@
       content="Customer Service is The Face of Our Company"
     />
     <link
+      rel="icon"
+      href="https://www.trialphatechnologies.com/iflexiblelimited/img/favicon-(1).png"
+      type="image/x-icon"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
