portfolio text updated

--- a/iflexiblelimited/index.html
+++ b/iflexiblelimited/index.html
@@ -172,7 +172,7 @@
                         <span class="cd-words-wrapper">
                             <b class="is-visible">Front-End Developer</b>
                             <b>UI/UX Designer</b>
-                            <b>Graphic Designer</b>
+                            <!-- <b>Graphic Designer</b> -->
                             <b>Freelancer</b>
                         </span>
                     </p>
@@ -198,7 +198,7 @@
                         <div class="col-lg-8">
                             <!--Personal Intro-->
                             <h3 class="mb-20"></h3>
-                            <p>Innovative, task-driven professional with 3+ years of experience as a Front-End Developer
+                            <p>Innovative, task-driven professional with 4+ years of experience as a Front-End Developer
                                 across diverse industries. Equipped with
                                 a record of success in consistently identifying and providing the technological needs of
                                 companies through ingenious innovation. Proficient in developing UI/UX designs using
