--- a/applab-test/index.html
+++ b/applab-test/index.html
@@ -1,135 +1,97 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>appLab Test</title>
-    <meta
-      name="description"
-      content="appLab Conduct Test to hire new employee"
-    />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <!-- Style CSS -->
+    <link rel="stylesheet" href="./style/output/style.css" />
+
     <link
       rel="stylesheet"
       href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
     />
-    <link
-      href="./assets/vendor/boxicons/css/boxicons.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./style/output/style.css" />
   </head>
   <body>
-    <header>
+    <header class="cd__main">
+      <!-- Start DEMO HTML (Use the following code into your project)-->
       <nav>
         <div class="navbar">
-          <div class="logo"><a href="#">Newrich</a></div>
           <i class="bx bx-menu"></i>
+          <div class="logo"><a href="#">Logo</a></div>
           <div class="nav-links">
             <div class="sidebar-logo">
-              <span class="logo-name">Newrich</span>
+              <span class="logo-name">Logo</span>
               <i class="bx bx-x"></i>
             </div>
             <ul class="links">
               <li>
                 <a href="#">About Us</a>
-                <i class="bx bx-plus js-arrow arrow"></i>
+                <i class="bx bx-plus htmlcss-arrow arrow"></i>
+                <ul class="htmlCss-sub-menu sub-menu">
+                  <li><a href="#">Web Design</a></li>
+                  <li><a href="#">Login Forms</a></li>
+                  <li><a href="#">Card Design</a></li>
+                  <li class="more">
+                    <span
+                      ><a href="#">More</a>
+                      <i class="bx bxs-chevron-right arrow more-arrow"></i>
+                    </span>
+                    <ul class="more-sub-menu sub-menu">
+                      <li><a href="#">Neumorphism</a></li>
+                      <li><a href="#">Pre-loader</a></li>
+                      <li><a href="#">Glassmorphism</a></li>
+                    </ul>
+                  </li>
+                </ul>
               </li>
+              <li><a href="#">Strategic Framework</a></li>
+              <li><a href="#">Projects</a></li>
               <li>
-                <a href="#">Strategic Framework</a>
+                <a href="#">Media Center</a>
                 <i class="bx bx-plus js-arrow arrow"></i>
-                <ul class="sub-menu">
+                <ul class="js-sub-menu sub-menu">
                   <li><a href="#">Dynamic Clock</a></li>
                   <li><a href="#">Form Validation</a></li>
                   <li><a href="#">Card Slider</a></li>
                   <li><a href="#">Complete Website</a></li>
                 </ul>
               </li>
-              <li>
-                <a href="#">Industries</a>
-                <i class="bx bx-plus js-arrow arrow"></i>
-                <ul class="sub-menu">
-                  <li>
-                    <a href="#">How to Use</a>
-                    <i class="bx bxs-chevron-right arrow"></i>
-                    <ul class="deep-sub-menu">
-                      <li><a href="#">Code of Conduct</a></li>
-                      <li><a href="#">Terms of Service</a></li>
-                      <li><a href="#">Best Practices</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="#">Tutorials</a
-                    ><i class="bx bxs-chevron-right arrow"></i>
-                    <ul class="deep-sub-menu">
-                      <li><a href="#">Code of Conduct</a></li>
-                      <li><a href="#">Terms of Service</a></li>
-                      <li><a href="#">Best Practices</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="#">Guidelines</a
-                    ><i class="bx bxs-chevron-right arrow"></i>
-                    <ul class="deep-sub-menu">
-                      <li><a href="#">Code of Conduct</a></li>
-                      <li><a href="#">Terms of Service</a></li>
-                      <li><a href="#">Best Practices</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="#">Help</a
-                    ><i class="bx bxs-chevron-right arrow"></i>
-                    <ul class="deep-sub-menu">
-                      <li><a href="#">Code of Conduct</a></li>
-                      <li><a href="#">Terms of Service</a></li>
-                      <li><a href="#">Best Practices</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="#">Theme “build”</a
-                    ><i class="bx bxs-chevron-right arrow"></i>
-                    <ul class="deep-sub-menu">
-                      <li><a href="#">Code of Conduct</a></li>
-                      <li><a href="#">Terms of Service</a></li>
-                      <li><a href="#">Best Practices</a></li>
-                    </ul>
-                  </li>
-                  <li class="more">
-                    <a href="#">Instruction Manual</a>
-                    <i class="bx bxs-chevron-right arrow more-arrow"></i>
-                    <ul class="deep-sub-menu">
-                      <li><a href="#">Code of Conduct</a></li>
-                      <li><a href="#">Terms of Service</a></li>
-                      <li><a href="#">Best Practices</a></li>
-                    </ul>
-                  </li>
-                </ul>
-              </li>
-              <li>
-                <a href="#">FAQ's</a>
-              </li>
-              <li>
-                <a href="#">Resource</a>
-                <i class="bx bx-plus js-arrow arrow"></i>
-              </li>
-              <li class="try-btn-mobile">
-                <a href="#">Try For Free</a>
-              </li>
+              <li><a href="#">Contributed Companies</a></li>
+              <li><a href="#">Contact Us</a></li>
+              <li><a href="#">Tenders</a></li>
             </ul>
           </div>
-          <div class="try-btn">
-            <a href="#">Try for free</a>
+          <div class="endIcons d-flex align-items-center gap-3">
+            <div class="search-box">
+              <i class="bx bx-search"></i>
+              <div class="input-box">
+                <input type="text" placeholder="Search..." />
+              </div>
+            </div>
+            <div class="text-white">
+              <img src="./img/flag-ar.png" alt="" srcset="" />
+            </div>
+            <div class="clipboard">
+              <img src="./img/clipboard.png" alt="" srcset="" />
+            </div>
           </div>
         </div>
       </nav>
+      <section class="hero-section"></section>
     </header>
     <main></main>
+
     <footer></footer>
 
-    <script src="script.js"></script>
+    <!-- Script JS -->
+    <script src="./script.js"></script>
   </body>
 </html>
