--- a/applab-test/index.html
+++ b/applab-test/index.html
@@ -44,11 +44,7 @@
                 <a href="#">About Us</a>
                 <i class="bx bx-plus htmlcss-arrow arrow"></i>
                 <ul class="htmlCss-sub-menu sub-menu">
-                  <img
-                    style="margin-top: -10px"
-                    src="./img/Polygon.png"
-                    alt=""
-                  />
+                  <img src="./img/Polygon.png" alt="" />
                   <li><a href="#">About Daam</a></li>
                   <li><a href="#">Vision & Mission</a></li>
                   <li><a href="#">Board Members</a></li>
@@ -72,6 +68,7 @@
                 <a href="#">Media Center</a>
                 <i class="bx bx-plus js-arrow arrow"></i>
                 <ul class="js-sub-menu sub-menu">
+                  <img src="./img/Polygon.png" alt="" />
                   <li><a href="#">Dynamic Clock</a></li>
                   <li><a href="#">Form Validation</a></li>
                   <li><a href="#">Card Slider</a></li>
