--- a/applab-test/index.html
+++ b/applab-test/index.html
@@ -13,6 +13,13 @@
     />
     <link
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
       href="./OwlCarousel2-2.3.4/dist/assets/owl.carousel.min.css"
     />
     <link
@@ -20,6 +27,7 @@
       href="./OwlCarousel2-2.3.4/dist/assets/owl.theme.default.min.css"
     />
     <!-- Style CSS -->
+
     <link rel="stylesheet" href="./style/output/style.css" />
 
     <link
@@ -161,7 +169,7 @@
                 role="tabpanel"
                 aria-labelledby="pills-news-tab"
               >
-                <div class="owl-carousel owl-carousel-01">
+                <div class="owl-carousel .owl-carousel-01">
                   <div class="news-slide-01 news-slide">
                     <div>
                       <img src="./img/news-img-01.png" alt="" />
@@ -181,6 +189,42 @@
                     </div>
                   </div>
                   <div class="news-slide-02 news-slide">
+                    <div>
+                      <img src="./img/news-img-02.png" alt="" />
+                      <p>22 Aug 2023</p>
+                      <div class="d-flex align-items-center">
+                        <p>
+                          Sed dignissim aliquam tincidunt. Duis. Pellentesque
+                          sit amet dolor non.
+                        </p>
+                        <img
+                          class="icon"
+                          src="./img/arrow45deg.png"
+                          alt=""
+                          srcset=""
+                        />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="news-slide-03 news-slide">
+                    <div>
+                      <img src="./img/news-img-01.png" alt="" />
+                      <p>22 Aug 2023</p>
+                      <div class="d-flex align-items-center">
+                        <p>
+                          Sed dignissim aliquam tincidunt. Duis. Pellentesque
+                          sit amet dolor non.
+                        </p>
+                        <img
+                          class="icon"
+                          src="./img/arrow45deg.png"
+                          alt=""
+                          srcset=""
+                        />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="news-slide-03 news-slide">
                     <div>
                       <img src="./img/news-img-01.png" alt="" />
                       <p>22 Aug 2023</p>
@@ -224,7 +268,7 @@
                 role="tabpanel"
                 aria-labelledby="pills-gallery-tab"
               >
-                Gallery
+                <h1>Gallery comming soon</h1>
               </div>
               <div
                 class="tab-pane fade"
@@ -232,7 +276,7 @@
                 role="tabpanel"
                 aria-labelledby="pills-videos-tab"
               >
-                Videos
+                <h1>Videos coming soon</h1>
               </div>
             </div>
           </div>
@@ -248,36 +292,62 @@
           <div>
             <ul>
               <li>
-                <div class="d-inline-block cube">01</div>
+                <div class="d-inline-block">
+                  <img src="./img/one.png" alt="" srcset="" />
+                </div>
                 <span class="list-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Nesciunt, est.
                 </span>
               </li>
               <li>
-                <div class="d-inline-block cube">02</div>
+                <div class="d-inline-block">
+                  <img src="./img/two.png" alt="" srcset="" />
+                </div>
                 <span class="list-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Nesciunt, est.
                 </span>
               </li>
               <li>
-                <div class="d-inline-block cube">03</div>
+                <div class="d-inline-block">
+                  <img src="./img/three.png" alt="" srcset="" />
+                </div>
                 <span class="list-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Nesciunt, est.
                 </span>
               </li>
               <li>
-                <div class="d-inline-block cube">04</div>
+                <div class="d-inline-block">
+                  <img src="./img/four.png" alt="" srcset="" />
+                </div>
                 <span class="list-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Nesciunt, est.
                 </span>
               </li>
               <li>
-                <div class="d-inline-block cube">
-                  <span> 05 </span>
+                <div class="d-inline-block">
+                  <img src="./img/five.png" alt="" srcset="" />
+                </div>
+                <span class="list-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Nesciunt, est.
+                </span>
+              </li>
+              <li>
+                <div class="d-inline-block">
+                  <img src="./img/six.png" alt="" srcset="" />
+                </div>
+                <span class="list-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Nesciunt, est.
+                </span>
+              </li>
+              <li>
+                <div class="d-inline-block">
+                  <img src="./img/seven.png" alt="" srcset="" />
                 </div>
                 <span class="list-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -291,12 +361,12 @@
       <section class="section-04">
         <div class="tabPortion">
           <div>
-            <div class="section-04-title">
-              <div class="cube d-inline"></div>
-              <span>Supporting Companies</span>
-              <div class="cube d-inline"></div>
-            </div>
             <div class="containerSection">
+              <div class="section-04-title">
+                <div class="cube d-inline"></div>
+                <span>Supporting Companies</span>
+                <div class="cube d-inline"></div>
+              </div>
               <p class="text-white">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                 Adipisci at totam quisquam?
@@ -435,41 +505,41 @@
                     <img src="./img/commercial-bank.png" alt="" srcset="" />
                   </div>
                   <div>
-                    <img src="./img/commercial-bank.png" alt="" srcset="" />
+                    <img src="./img/qib.png" alt="" srcset="" />
                   </div>
                   <div>
-                    <img src="./img/commercial-bank.png" alt="" srcset="" />
+                    <img src="./img/qnb.png" alt="" srcset="" />
                   </div>
                   <div>
-                    <img src="./img/commercial-bank.png" alt="" srcset="" />
+                    <img src="./img/qiib.png" alt="" srcset="" />
                   </div>
                   <div>
-                    <img src="./img/commercial-bank.png" alt="" srcset="" />
+                    <img src="./img/ahlibank.png" alt="" srcset="" />
                   </div>
                   <div>
-                    <img src="./img/commercial-bank.png" alt="" srcset="" />
+                    <img src="./img/dohabank.png" alt="" srcset="" />
                   </div>
                   <div>
-                    <img src="./img/commercial-bank.png" alt="" srcset="" />
+                    <img src="./img/alijarah.png" alt="" srcset="" />
                   </div>
                   <div>
-                    <img src="./img/commercial-bank.png" alt="" srcset="" />
+                    <img src="./img/lesha-bank.png" alt="" srcset="" />
                   </div>
                   <div>
-                    <img src="./img/commercial-bank.png" alt="" srcset="" />
+                    <img src="./img/masraf.png" alt="" srcset="" />
                   </div>
                   <div>
-                    <img src="./img/commercial-bank.png" alt="" srcset="" />
+                    <img src="./img/anama.png" alt="" srcset="" />
                   </div>
 
                   <div>
-                    <img src="./img/commercial-bank.png" alt="" srcset="" />
+                    <img src="./img/qatar-oman.png" alt="" srcset="" />
                   </div>
                   <div>
-                    <img src="./img/commercial-bank.png" alt="" srcset="" />
+                    <img src="./img/dalala.png" alt="" srcset="" />
                   </div>
                   <div>
-                    <img src="./img/commercial-bank.png" alt="" srcset="" />
+                    <img src="./img/dukhan-bank.png" alt="" srcset="" />
                   </div>
                 </div>
               </div>
@@ -629,9 +699,192 @@
           </div>
         </div>
       </section>
+      <section class="section-06">
+        <div class="container">
+          <div
+            class="section-06-content row justify-content-center align-items-center gap-3"
+          >
+            <div class="logo col-md-4 col-lg-4">
+              <img
+                class="w-100"
+                src="./img/logo_placeholder.png"
+                alt=""
+                srcset=""
+              />
+            </div>
+            <div class="textContent col-md-2 col-lg-2">
+              <h2 class="text-white">Stay with us</h2>
+            </div>
+            <div class="form col-md-5 col-lg-5">
+              <form action="" class="d-block">
+                <input
+                  class="form-control"
+                  type="text"
+                  name=""
+                  id=""
+                  placeholder="Enter your email"
+                />
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
-    <footer></footer>
+    <!-- Site footer -->
+    <footer class="site-footer">
+      <div class="container">
+        <div class="row" style="margin-bottom: 80px">
+          <!-- <div class="col-sm-12 col-md-6">
+            <h6>About</h6>
+            <p class="text-justify">
+              Scanfcode.com <i>CODE WANTS TO BE SIMPLE </i> is an initiative to
+              help the upcoming programmers with the code. Scanfcode focuses on
+              providing the most efficient code or snippets as the code wants to
+              be simple. We will help programmers build up concepts in different
+              programming languages that include C, C++, Java, HTML, CSS,
+              Bootstrap, JavaScript, PHP, Android, SQL and Algorithm.
+            </p>
+          </div> -->
+          <div class="col-xs-6 col-md-3">
+            <h6>Media Center</h6>
+            <ul class="footer-links">
+              <li>
+                <a href="http://scanfcode.com/category/back-end-development/"
+                  >News</a
+                >
+              </li>
+              <li>
+                <a
+                  href="http://scanfcode.com/category/java-programming-language/"
+                  >Publications</a
+                >
+              </li>
+              <li>
+                <a href="http://scanfcode.com/category/android/"
+                  >Media Gallery</a
+                >
+              </li>
+              <li>
+                <a href="http://scanfcode.com/category/templates/">FAQs</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-xs-6 col-md-3">
+            <h6>About Us</h6>
+            <ul class="footer-links">
+              <li>
+                <a href="http://scanfcode.com/category/front-end-development/"
+                  >About Maecenas
+                </a>
+              </li>
+              <li>
+                <a href="http://scanfcode.com/category/back-end-development/"
+                  >Vision & Mission</a
+                >
+              </li>
+              <li>
+                <a
+                  href="http://scanfcode.com/category/java-programming-language/"
+                  >Board Members
+                </a>
+              </li>
+              <li>
+                <a href="http://scanfcode.com/category/android/">CEO</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="col-xs-6 col-md-3">
+            <h6>Quick Link</h6>
+            <ul class="footer-links">
+              <li>
+                <a href="http://scanfcode.com/category/c-language/"
+                  >Contact Us</a
+                >
+              </li>
+              <li>
+                <a href="http://scanfcode.com/category/front-end-development/"
+                  >Projects</a
+                >
+              </li>
+              <li>
+                <a href="http://scanfcode.com/category/back-end-development/"
+                  >Contributed Companies
+                </a>
+              </li>
+              <li>
+                <a
+                  href="http://scanfcode.com/category/java-programming-language/"
+                  >Strategic Framework</a
+                >
+              </li>
+              <li>
+                <a href="http://scanfcode.com/category/android/">Tenders</a>
+              </li>
+              <li>
+                <a href="http://scanfcode.com/category/templates/"
+                  >Terms & Conditions</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <div class="col-xs-6 col-md-3">
+            <h6>Get Touch with Us</h6>
+            <ul class="footer-links">
+              <li>
+                <a href="http://scanfcode.com/about/"
+                  ><img src="./img/phone-icon.png" alt="" srcset="" /> +974
+                  12345678</a
+                >
+              </li>
+              <li>
+                <a href="http://scanfcode.com/contact/"
+                  ><img src="./img/location.png" alt="" srcset="" /> © Maecenas
+                  2023. All rights reserved to The Maecenas</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 col-sm-6 col-xs-12">
+            <p class="copyright-text">
+              Copyright &copy; 2017 All Rights Reserved by
+              <a href="#">Scanfcode</a>.
+            </p>
+          </div>
+
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <ul class="social-icons">
+              <li>
+                <a class="facebook" href="#"
+                  ><img src="./img/linkedin.png" alt="" srcset=""
+                /></a>
+              </li>
+              <li>
+                <a class="twitter" href="#"
+                  ><img src="./img/twitter.png" alt="" srcset=""
+                /></a>
+              </li>
+              <li>
+                <a class="dribbble" href="#"
+                  ><img src="./img/youtube.png" alt="" srcset=""
+                /></a>
+              </li>
+              <li>
+                <a class="linkedin" href="#"
+                  ><img src="./img/instagram-footer-icon.png" alt="" srcset=""
+                /></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <!-- Script JS -->
     <script
